--- a/main.html
+++ b/main.html
@@ -9,11 +9,14 @@
 <body>
 	<h1>My Playlist</h1>
 	<div class="player_one">
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song 1</a>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song 2</a>
-		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song 3</a>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song 4</a>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song 5</a>
+		<ul>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song 1</a></li>	
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song 2</a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song 3</a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song 4</a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song 5</a></li>
+		</ul>
+		
 	</div>
 	<h2>Now Playing...</h2>
 	<div class="player_two">
