--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		</video>
 		<h2>MP3 songs</h2>
 		<audio controls>
-			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
 		</audio>
 	</div>
 	<!-- the entire body must be written by student -->
